02-aplicacoes/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    name: grafana-service
spec:
  selector:
    app: grafana
  #type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
